2004-10-13  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/awt/image/ByteLookupTable/lookupPixel.java
	gnu/testlet/java/awt/image/ShortLookupTable/lookupPixel.java:
	Two new testcases.

2004-10-13  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/lang/reflect/Method/toString.java:
	Added some more testcases.

2004-10-13  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/InetAddress/getCanonicalHostName.java:
	New testcase.

2004-10-12  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/util/Date/range.java: New test.

2004-10-10  Andreas Tobler <toa@pop.agri.ch>

	* gnu/testlet/java/sql/Timestamp/TimestampTest.java: Set default
	TimeZone before the tests.

2004-10-08  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/util/Calendar/set.java: New test.
	* gnu/testlet/java/util/TimeZone/setDefault.java: New test.

2004-09-29  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/Properties/AcuniaPropertiesTest.java
	(test_loadextra): Handle "ents" case properly.  Updated
	explanation.

2004-09-23  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/net/URL/URLTest.java: Add tests for getUserInfo().

2004-09-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FileDescriptor/jdk11.java: Add harness.debug()
	for thrown exception.

2004-09-21  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Collections/binarySearch.java: Add more
	generic tests for ArrayList, LinkedList and Vector.

2004-09-21  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/Properties/AcuniaPropertiesTest.java
	(test_loadextra): Leading whitespace doesn't matter.

2004-09-20  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Collections/binarySearch.java: New test.

2004-09-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Collections/copy.java: New test.
	* gnu/testlet/java/util/Collections/fill.java: Likewise.